syntax = "proto3";

package demo.proto;

option java_multiple_files = true;
option java_package = "demo.proto";
option java_outer_classname = "HelloWorldProto";

service Greeter {
    rpc Greet (HelloRequest) returns (HelloResponse) {}
    rpc MultiGreet (HelloRequest) returns (stream HelloResponse) {}
    rpc StreamGreet (stream HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}